name:                unordered-graphs
version:             0.1.0
synopsis:            Graph library using unordered-containers
description:         Simple graph library allowing any Hashable instance
                     to be a node type.
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Data Structures, Graphs
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Graph.Unordered
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , unordered-containers == 0.2.*
                     , hashable
  hs-source-dirs:      src
  default-language:    Haskell2010
